--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,41 +1,40 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Countries</h1>
-
-<table>
+<%- model_class = Country -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Visited</th>
-      <th>Population</th>
-      <th>Size</th>
-      <th>Currency</th>
-      <th>Language</th>
-      <th>Bio</th>
-      <th>Featured</th>
-      <th colspan="3"></th>
+      <th><%= model_class.human_attribute_name(:name) %></th>
+      <th><%= model_class.human_attribute_name(:language) %></th>
+      <th><%= model_class.human_attribute_name(:currency) %></th>
+      <th><%= model_class.human_attribute_name(:visited) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @countries.each do |country| %>
       <tr>
         <td><%= country.name %></td>
-        <td><%= country.visited %></td>
-        <td><%= country.population %></td>
-        <td><%= country.size %></td>
-        <td><%= country.currency %></td>
         <td><%= country.language %></td>
-        <td><%= country.bio %></td>
-        <td><%= country.featured %></td>
-        <td><%= link_to 'Show', country %></td>
-        <td><%= link_to 'Edit', edit_country_path(country) %></td>
-        <td><%= link_to 'Destroy', country, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= country.currency %></td>
+        <td><%= country.visited ? 'Yes' : 'No' %></td>
+        <td>
+          <%= link_to t('.show', :default => t("helpers.links.show")),
+                      country_path(country), :class => 'btn btn-success btn-xs' %>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_country_path(country), :class => 'btn btn-primary btn-xs' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      country_path(country),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-xs btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Country', new_country_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_country_path,
+            :class => 'btn btn-primary' %>
