--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -1,44 +1,25 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Country -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Name:</strong>
-  <%= @country.name %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
+  <dd><%= @country.name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:language) %>:</strong></dt>
+  <dd><%= @country.language %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:currency) %>:</strong></dt>
+  <dd><%= @country.currency %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:visited) %>:</strong></dt>
+  <dd><%= @country.visited ? 'Yes' : 'No' %></dd>
+</dl>
 
-<p>
-  <strong>Visited:</strong>
-  <%= @country.visited %>
-</p>
-
-<p>
-  <strong>Population:</strong>
-  <%= @country.population %>
-</p>
-
-<p>
-  <strong>Size:</strong>
-  <%= @country.size %>
-</p>
-
-<p>
-  <strong>Currency:</strong>
-  <%= @country.currency %>
-</p>
-
-<p>
-  <strong>Language:</strong>
-  <%= @country.language %>
-</p>
-
-<p>
-  <strong>Bio:</strong>
-  <%= @country.bio %>
-</p>
-
-<p>
-  <strong>Featured:</strong>
-  <%= @country.featured %>
-</p>
-
-<%= link_to 'Edit', edit_country_path(@country) %> |
-<%= link_to 'Back', countries_path %>
+<%= link_to t('.back', :default => t("helpers.links.back")),
+              countries_path, :class => 'btn btn-default'  %>
+<%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_country_path(@country), :class => 'btn btn-primary' %>
+<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              country_path(@country),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
